<resources>
    <string name="app_name">Livelo Automation</string>
    <string name="app_name_upper">LIVELO AUTOMATION</string>
    <string name="wait_updating_information">Aguarde, atualizando informações.</string>
    <string name="tutorial_option_join_now">Entrar agora</string>
    <string name="tutorial_option_activate_account">Ativar conta</string>
    <string name="tutorial_option_login">Login</string>
    <string name="tutorial_option_enter_without_login">Entrar sem login</string>
    <string name="tutorial_firts_page_title">Bem-vindo</string>
    <string name="tutorial_firts_page_description">Aqui você pode acompanhar toda\na movimentação da sua conta.</string>
    <string name="tutorial_second_page_title">Saldo de pontos</string>
    <string name="tutorial_second_page_description">Uma maneira fácil de\nacompanhar seus pontos.</string>
    <string name="tutorial_third_page_title">Extrato detalhado</string>
    <string name="tutorial_third_page_description">Acompanhe aqui suas transações.</string>
    <string name="tutorial_fourth_page_title">Tudo na sua mão</string>
    <string name="tutorial_fourth_page_description">Tenha tudo ao alcance de um toque\nna palma de sua mão.</string>
    <string name="tutorial_fifth_page_title">Começe a usar agora</string>
    <string name="tutorial_fifth_page_description">Aproveite as vantagens\nde ser um cliente Livelo.</string>
    <string name="login_hint_cpf">CPF</string>
    <string name="login_hint_password">Senha</string>
    <string name="login_button_join">ENTRAR</string>
    <string name="login_button_activate_account">ATIVAR CONTA</string>
    <string name="login_enter_whithout">Entrar sem login</string>
    <string name="login_forgot_password">Esqueceu sua senha?</string>
    <string name="login_wrong_user_ou_password">Usuário ou senha inválidos.\nConfira seus dados e tente novamente</string>
    <string name="login_wrong_cpf">CPF inválido.</string>
    <string name="geolocation_title">GEOLOCALIZAÇÃO</string>
    <string name="geolocation_description">Para oferecer uma experiência completa, precisamos saber onde você está, tudo bem?</string>
    <string name="geolocation_option_no">Não</string>
    <string name="geolocation_option_yes">Sim</string>
    <string name="connection_error_title">ERRO DE CONEXÃO</string>
    <string name="connection_error_option_no">Não</string>
    <string name="connection_error_description">Ops, precisamos de internet para\nprosseguir e não detectamos nenhuma conexão.</string>
    <string name="connection_error_option_try_again">Tentar Novamente</string>
    <string name="generic_error_title">OPS</string>
    <string name="generic_error_description">Ops, tivemos um problema.</string>
    <string name="generic_error_option_try_again">Tentar Novamente</string>
    <string name="open_url_title">ATENÇÃO!</string>
    <string name="open_url_description">Você será direcionado para o site mobile da Livelo. Deseja continuar?</string>
    <string name="open_url_option_positive">Sim</string>
    <string name="open_url_option_negative">Não</string>
    <string name="error_generic_description">Algo deu errado.\nTente novamente mais tarde.</string>
    <string name="error_generic_option_positive">Tentar novamente</string>
    <string name="error_generic_option_negative">Cancelar</string>
    <string name="activate_account_header">Para ativar sua conta Livelo, você precisa participar dos programas Fidelidade Bradesco Cartões ou Ponto pra Você, do Banco do Brasil.</string>
    <string name="activate_account_btn_footer">SOLICITE SEU CÓDIGO DE ATIVAÇÃO</string>
    <string name="activate_account_hint_cpf">CPF</string>
    <string name="activate_account_hint_activation_code">Código de ativação</string>
    <string name="activate_account_button_activate">Ativar</string>
    <string name="register_toolbar_title">Ativar Conta</string>
    <string name="register_info">Você está a um passo de aproveitar todas as vantagens Livelo. Por favor, confira seus dados de cadastro e clique em salvar para ativar sua conta.</string>
    <string name="register_title">Confirme seus dados</string>
    <string name="register_subtitle">*Campos obrigatórios</string>
    <string name="register_hint_cpf">CPF</string>
    <string name="register_hint_rg">RG</string>
    <string name="register_hint_name">Nome</string>
    <string name="register_hint_nickname">Apelido</string>
    <string name="register_hint_nationality">Nacionalidade</string>
    <string name="register_hint_sex">Sexo</string>
    <string name="register_hint_birth_date">Data de Nascimento</string>
    <string name="register_hint_email">E-mail</string>
    <string name="register_hint_confirm_email">Confirme seu e-mail</string>
    <string name="register_hint_main_address">Endereço principal</string>
    <string name="register_hint_phone_home">Telefone Residencial</string>
    <string name="register_hint_phone_work">Telefone Comercial</string>
    <string name="register_hint_celphone">Telefone Celular</string>
    <string name="register_hint_password">Senha* (6 caracteres)</string>
    <string name="register_hint_confirm_password">Confirmar senha</string>
    <string name="register_switch_push">Desejo receber mensagens\ne notificações via push.</string>
    <string name="register_switch_sms">Desejo receber ofertas por SMS</string>
    <string name="register_switch_email">Desejo receber ofertas por e-mail.</string>
    <string name="register_terms_and_conditions"><![CDATA[Ao clicar em salvar, você estará concordando com nossos <u>termos e condições.</u>]]></string>
    <string name="register_button_activate_account">ATIVAR MINHA CONTA</string>
    <string name="register_error_required_fields">Ops, é preciso preencher todos os campos obrigatórios.</string>
    <string name="register_error_field">Campo obrigatório</string>
    <string name="register_error_field_email">Os e-mails não são iguais</string>
    <string name="register_error_field_password">As senhas não são iguais</string>
    <string name="menu_item_home">Início</string>
    <string name="menu_item_my_account">Minha Conta</string>
    <string name="menu_item_product_catalog">Catálogo</string>
    <string name="menu_item_qr_code">QR Code</string>
    <string name="menu_item_rescue_code">Código de Autorização</string>
    <string name="menu_item_contact_us">Fale conosco</string>
    <string name="menu_item_my_points">Meus Pontos</string>
    <string name="menu_item_my_data">Meus Dados</string>
    <string name="menu_item_exit">Sair</string>
    <string name="menu_header_greet">Olá,</string>
    <string name="logout_descrition">Deseja sair\ndo aplicativo?</string>
    <string name="logout_positive_option">Sim</string>
    <string name="logout_negative_option">Não</string>
    <string name="logout_session_expired_title">SESSÃO EXPIRADA</string>
    <string name="logout_session_expired_desc">Sua sessão expirou.\nLogue novamente</string>
    <string name="logout_session_expired_option">Login</string>
    <string name="my_account_title">MINHA CONTA</string>
    <string name="my_account_item_my_points">MEUS PONTOS</string>
    <string name="my_account_item_my_data">MEUS DADOS</string>
    <string name="my_account_item_rescue_history">MEUS PEDIDOS</string>
    <string name="my_account_item_fingerprint">IMPRESSÃO DIGITAL</string>
    <string name="my_account_item_change_password">ALTERAR SENHA</string>
    <string name="account_activated_title">Ativação Concluída</string>
    <string name="account_activated_description">A partir de agora, você pode aproveitar\ntodas as vantagens da Livelo</string>
    <string name="account_activated_button">COMEÇAR A USAR</string>
    <string name="my_account_toolbar_title">MEUS DADOS</string>
    <string name="my_account_description">Para alterar seus dados, acesse o nosso site</string>
    <string name="my_account_description_site">www.livelo.com.br</string>
    <string name="my_account_button">EDITAR MEUS DADOS</string>
    <string name="summary_points_title">RESUMO</string>
    <string name="summary_points_subtitle">SEU SALDO LIVELO</string>
    <string name="summary_points_no_points">Você ainda não/npossui pontos.</string>
    <string name="summary_points_gain_points">Saiba como ganhar pontos Livelo.</string>
    <string name="summary_points_accumulated_title">Pontos acumulados</string>
    <string name="summary_points_accumulated_subtitle">Nos últimos 30 dias</string>
    <string name="summary_points_expire_title">Pontos a expirar</string>
    <string name="summary_points_expire_subtitle">Nos próximos 60 dias</string>
    <string name="summary_points_rescued_title">Pontos resgatados</string>
    <string name="summary_points_rescued_subtitle">Nos últimos 30 dias</string>
    <string name="summary_loading_update_amount">Atualizando Total...</string>
    <string name="home_subtitle">SEU SALDO LIVELO</string>
    <string name="home_product_catalog">CATÁLOGO DE\nRECOMPENSAS</string>
    <string name="home_qr_code">QR CODE</string>
    <string name="home_my_account">MINHA\nCONTA</string>
    <string name="home_rescue_code">CÓDIGO DE\nAUTORIZAÇÃO</string>
    <string name="extract_points_title">EXTRATO</string>
    <string name="extract_points_subtitle">VER TODO O HISTÓRICO</string>
    <string name="extract_show_historic">@string/extract_points_subtitle</string>
    <string name="extract_points_accumulated_title">Pontos acumulados</string>
    <string name="extract_points_expire_title">Pontos a expirar</string>
    <string name="extract_points_rescued_title">Pontos resgatados</string>
    <string name="extract_points_downloads_title">Pontos transferidos</string>
    <string name="extract_points_chargebacks_title">Pontos estornados</string>
    <string name="extract_clean_title">Nada por aqui</string>
    <string name="extract_clean_description">Você não possui\ntransações nesse mês.</string>
    <string name="historical_extract_title_toolbar">HISTÓRICO DO EXTRATO</string>
    <string name="historical_extract_organize">ORGANIZAR POR</string>
    <string name="historical_extract_organize_by_most_recent">Mais recentes</string>
    <string name="historical_extract_organize_by_most_old">Mais antigos</string>
    <string name="historical_extract_filter">FILTRAR POR</string>
    <string name="historical_extract_filter_by_all">Todos</string>
    <string name="token_subtitle_start">Quase lá. Agora só falta associar \num dispositivo à sua conta.</string>
    <string name="token_description">É só clicar no botão abaixo que enviaremos \num código de confirmação por SMS.</string>
    <string name="token_btn_request_activation">Solicitar Ativação</string>
    <string name="token_title_activation">Digite aqui o código de ativação</string>
    <string name="token_hint_activation">Código de ativação</string>
    <string name="token_btn_activation">Ativar</string>
    <string name="token_send_code_again">Não recebi. Enviar novamente.</string>
    <string name="historic_filter_filter_by_all">Todos</string>
    <string name="historic_filter_filter_by_partner_name">Nome do parceiro</string>
    <string name="historic_filter_filter_by_points_accumulated">Pontos acumulados</string>
    <string name="historic_filter_filter_by_points_rescued">Pontos resgatados</string>
    <string name="historic_filter_filter_by_points_expired">Pontos expirados</string>
    <string name="change_password_different_passwords">As senhas devem ser iguais. Por favor, digite novamente.</string>
    <string name="change_password_title">Digite sua senha atual e a nova senha.</string>
    <string name="change_password_actual_pass">Senha atual*</string>
    <string name="change_password_new_pass">Nova senha*</string>
    <string name="change_password_confirm_pass">Confirmar nova senha*</string>
    <string name="change_password_btn_save">SALVAR NOVA SENHA</string>
    <string name="change_password_description">*A senha deve conter seis caracteres numéricos.</string>
</resources>