<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_not_status" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/LivautomationTheme.TextView.ChangePassword.Title"
                android:text="@string/change_password_title" />

            <br.com.pontomobi.livelopontos.ui.widget.PasswordComponent
                android:id="@+id/change_password_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/change_password_edt_pass_margin_top"
                app:hint_pass="@string/change_password_actual_pass" />

            <br.com.pontomobi.livelopontos.ui.widget.PasswordComponent
                android:id="@+id/change_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/change_password_edt_pass_margin_top"
                app:hint_pass="@string/change_password_new_pass" />

            <br.com.pontomobi.livelopontos.ui.widget.PasswordComponent
                android:id="@+id/change_password_new_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/change_password_edt_pass_margin_top"
                app:hint_pass="@string/change_password_confirm_pass" />

            <TextView
                style="@style/LivautomationTheme.TextView.ChangePassword.Description"
                android:text="@string/change_password_description" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/change_password_save"
                style="@style/LivautomationTheme.Button.ChangePassword.Save"
                android:text="@string/change_password_btn_save" />


        </LinearLayout>

    </ScrollView>

    <br.com.pontomobi.livelopontos.ui.widget.BannerError
        android:id="@+id/change_password_banner_error"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_banner_error_height"
        android:visibility="gone"
        app:banner_text="@string/change_password_different_passwords" />

    <include layout="@layout/loading" />

</RelativeLayout>