<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom">

        <com.rey.material.widget.EditText
            android:id="@+id/register_user_cpf"
            style="@style/LivautomationTheme.EditText.Register"
            android:hint="@string/register_hint_cpf" />

        <ImageView
            style="@style/LivautomationTheme.ImageView.Register"
            android:src="@drawable/ic_cadeado" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom">

        <com.rey.material.widget.EditText
            android:id="@+id/register_user_rg"
            style="@style/LivautomationTheme.EditText.Register"
            android:hint="@string/register_hint_rg" />

        <ImageView
            style="@style/LivautomationTheme.ImageView.Register"
            android:src="@drawable/ic_cadeado" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom">

        <com.rey.material.widget.EditText
            android:id="@+id/register_user_name"
            style="@style/LivautomationTheme.EditText.Register"
            android:hint="@string/register_hint_name" />

        <ImageView
            style="@style/LivautomationTheme.ImageView.Register"
            android:src="@drawable/ic_cadeado" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom">

        <com.rey.material.widget.EditText
            android:id="@+id/register_user_nickname"
            style="@style/LivautomationTheme.EditText.Register"
            android:maxLength="8"
            android:hint="@string/register_hint_nickname" />

        <ImageView
            android:id="@+id/cadeado_nickname"
            style="@style/LivautomationTheme.ImageView.Register"
            android:src="@drawable/ic_cadeado" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom">

        <com.rey.material.widget.EditText
            android:id="@+id/register_user_nationality"
            style="@style/LivautomationTheme.EditText.Register"
            android:hint="@string/register_hint_nationality" />

        <ImageView
            style="@style/LivautomationTheme.ImageView.Register"
            android:src="@drawable/ic_cadeado" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom">

        <com.rey.material.widget.Spinner
            android:id="@+id/register_user_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LivautomationTheme.Spinner"  />

        <ImageView
            android:id="@+id/cadeado_user_sex"
            style="@style/LivautomationTheme.ImageView.Register"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_cadeado" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom">

        <com.rey.material.widget.EditText
            android:id="@+id/register_user_birth_date"
            style="@style/LivautomationTheme.EditText.Register"
            android:hint="@string/register_hint_birth_date" />

        <ImageView
            style="@style/LivautomationTheme.ImageView.Register"
            android:src="@drawable/ic_cadeado" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom">

        <com.rey.material.widget.EditText
            android:id="@+id/register_user_email"
            style="@style/LivautomationTheme.EditText.Register"
            android:maxLength="120"
            android:hint="@string/register_hint_email"
            android:inputType="textEmailAddress"/>

        <ImageView
            android:id="@+id/cadeado_email"
            style="@style/LivautomationTheme.ImageView.Register"
            android:src="@drawable/ic_cadeado" />
    </FrameLayout>

    <com.rey.material.widget.EditText
        android:id="@+id/register_user_confirm_email"
        style="@style/LivautomationTheme.EditText.Register"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom"
        android:maxLength="120"
        android:hint="@string/register_hint_confirm_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_label_address"
        android:layout_centerVertical="true"
        style="@style/LivautomationTheme.TextView.Switch.Description"
        android:layout_marginBottom="8dp"
        android:text="@string/register_hint_main_address"
        android:visibility="gone"/>

    <br.com.pontomobi.livelopontos.ui.widget.ExpandableList
        android:id="@+id/register_user_address_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/register_user_edittext_margin_bottom" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom">

        <!--android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom"-->
        <com.rey.material.widget.EditText
            android:id="@+id/register_user_phone_home"
            style="@style/LivautomationTheme.EditText.Register"
            android:hint="@string/register_hint_phone_home"
            android:inputType="number" />

        <ImageView
            android:id="@+id/cadeado_phone_home"
            style="@style/LivautomationTheme.ImageView.Register"
            android:src="@drawable/ic_cadeado" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom">

        <!--android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom"-->
        <com.rey.material.widget.EditText
            android:id="@+id/register_user_phone_work"
            style="@style/LivautomationTheme.EditText.Register"
            android:hint="@string/register_hint_phone_work"
            android:inputType="number" />

        <ImageView
            android:id="@+id/cadeado_phone_work"
            style="@style/LivautomationTheme.ImageView.Register"
            android:src="@drawable/ic_cadeado" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom">

        <!--android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom"-->
        <com.rey.material.widget.EditText
            android:id="@+id/register_user_celphone"
            style="@style/LivautomationTheme.EditText.Register"
            android:hint="@string/register_hint_celphone"
            android:inputType="number" />

        <ImageView
            android:id="@+id/cadeado_celphone"
            style="@style/LivautomationTheme.ImageView.Register"
            android:src="@drawable/ic_cadeado" />
    </FrameLayout>

    <!--android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom"-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom">

        <com.rey.material.widget.EditText
            android:id="@+id/register_user_password"
            style="@style/LivautomationTheme.EditText.Register"
            android:hint="@string/register_hint_password"
            android:maxLength="6"
            android:inputType="numberPassword" />

        <ImageView
            android:id="@+id/cadeado_password"
            style="@style/LivautomationTheme.ImageView.Register"
            android:src="@drawable/ic_cadeado" />
    </FrameLayout>

    <com.rey.material.widget.EditText
        android:id="@+id/register_user_confirm_password"
        style="@style/LivautomationTheme.EditText.Register"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom"
        android:hint="@string/register_hint_confirm_password"
        android:maxLength="6"
        android:inputType="numberPassword" />

    <br.com.pontomobi.livelopontos.ui.widget.SwitchCustom
        android:id="@+id/register_user_switch_push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:switch_custom_text="@string/register_switch_push" />

    <br.com.pontomobi.livelopontos.ui.widget.SwitchCustom
        android:id="@+id/register_user_switch_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:switch_custom_text="@string/register_switch_sms" />

    <br.com.pontomobi.livelopontos.ui.widget.SwitchCustom
        android:id="@+id/register_user_switch_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:switch_custom_text="@string/register_switch_email" />

    <com.rey.material.widget.TextView
        android:id="@+id/register_user_terms_conditions"
        style="@style/LivautomationTheme.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_user_edittext_margin_bottom"
        android:layout_marginTop="@dimen/register_user_edittext_margin_bottom"
        android:checked="true"
        android:gravity="center_vertical"
        tools:text="@string/register_terms_and_conditions" />

</LinearLayout>