<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f5f5f5"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activate_device_image_margin_top"
        android:src="@drawable/token_cel" />

    <TextView
        style="@style/LiveloPontosTheme.TextView.Token.Title.Blue"
        android:layout_marginTop="@dimen/activate_device_description_margin_top"
        android:gravity="center"
        android:text="@string/token_subtitle_start" />

    <TextView
        style="@style/LiveloPontosTheme.TextView.Token.Description.Blue"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/token_description" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/request_activation"
        style="@style/LiveloPontosTheme.Button.Enabled"
        android:text="@string/token_btn_request_activation" />

</LinearLayout>